manifests/minio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: history-care-minio
spec:
  selector:
    app: history-care-minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
